Revise fix for [CALCITE-6587] Support Java 23 and Guava 33.3.0
Add '-Djava.security.manager=allow' in Gradle and re-enable
tests under JDK 23. (Tests will fail if people run them via
Junit.)